# ocr_exploration

./: .gitignore  README.md  pyproject.toml  test_parallel.py
notebooks/: ocr_v1.ipynb  ocr_v2.py
